GL/Projet_GL/src/test/deca/context/valid/sansObjet/assign/assign_simple_int.deca
// Test : assign_simple_int
// But : tester une affectation simple d’un entier.
// Couvre : déclaration variable, affectation, vérification de type.
// Résultat attendu : compilation sans erreur.

{
    int a;
    a = 3;
}