GL/Projet_GL/src/test/deca/context/invalid/sansObjet/assign/invalid_assign_boolean_to_int.deca
// Test : assign_bool_to_int
// But : interdire l’affectation d’un bool à un int.
// Couvre : typage des affectations.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: Incompatible assignment: expected  int, got boolean

{
    int a;
    a = true;
}
